--- a/src/components/Forms/Forms.css
+++ b/src/components/Forms/Forms.css
@@ -15,7 +15,7 @@
 }
 
 .container-registro{
-    background-image: url(./background.png);
+    background-image: url(../../Images/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 32px 88px 32px 88px;
