--- a/src/components/Forms/Forms.css
+++ b/src/components/Forms/Forms.css
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: end;
     margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 
